--- a/.github/workflows/ci-uxd.yml
+++ b/.github/workflows/ci-uxd.yml
@@ -18,6 +18,7 @@ env:
   anchor_version: 0.20.0
   cluster: "devnet"
   runner_wallet_path: "/home/runner/.config/solana/id.json"
+  test_wallet_path: "/home/runner/.config/solana/id-test.json"
   mango_account_mm: "8fbL4156uoVYYyY9cvA6hVBBTdui9356tdKmFbkC6t6w"
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
   DEVNET_FAUCET: "9B5XszUGdMaxCZ7uSQhPzdks5ZQSmWxrmzCSvtJ6Ns6g"
@@ -101,6 +102,7 @@ jobs:
           solana config set -u d
           solana config get
           solana-keygen new -o ${{ env.runner_wallet_path }}
+          solana-keygen new -o ${{ env.test_wallet_path }}
           
       - name: Checkout MangoClient-v3, install dependencies, and run MM bot devnet SOL perp + Keeper
         uses: actions/checkout@v2
@@ -108,39 +110,45 @@ jobs:
           repository: blockworks-foundation/mango-client-v3
           path: ./mango-client-v3
 
+      - name: Fund runner wallet with 1 sol for running Keeper/MM bot
+        run: |
+          solana airdrop 1 -u d
+
+      - name: Fund test wallet with 8 sol for running the tests
+        run: |
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+          solana airdrop 1 -u d
+
       - name: Install MangoClient-v3 dependencies then runs Mango Keeper and MM bot on devnet for SOL perp
         run: |
           cd ./mango-client-v3
           yarn install
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
           GROUP=devnet.2 CLUSTER=${{ env.cluster }} KEYPAIR=${{ env.runner_wallet_path }} yarn keeper &
           GROUP=devnet.2 CLUSTER=${{ env.cluster }} KEYPAIR=${{ env.runner_wallet_path }} MANGO_ACCOUNT_PUBKEY=${{ env.mango_account_mm }} MARKET=SOL yarn mm &
           cd -
-
 
       - name: Create NPMRC
         run: |
           echo "@uxdprotocol:registry=https://npm.pkg.github.com" >> ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ env.NODE_AUTH_TOKEN }}" >> ~/.npmrc
 
-      - name: Yarn install + use local version of Mango-v3 +  run tests
+      - name: Yarn install + use local version of Mango-v3
         run: |
           cd ./uxd-program
           sed -i.bak 's/^mango.*/mango={path="..\/..\/..\/program\/",features=["no-entrypoint"]}/' ./programs/uxd/Cargo.toml
           yarn install
           chmod +x ./scripts/reset_program_id.sh
           ./scripts/reset_program_id.sh
+
+      - name: Run tests (with test wallet)
+        run: |
+          solana config set -k ${{ test_wallet_path }}
           npx @project-serum/anchor-cli@${{ env.anchor_version }} test --skip-local-validator
 
       - name: Wrap up uninstalling program and returning sols to the faucet
