--- a/.github/workflows/ci-uxd.yml
+++ b/.github/workflows/ci-uxd.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: UXDProtocol/uxd-program
-          ref: refs/heads/main
+          ref: refs/heads/dev # USE dev for now as main is frozen for audit commit hash
           # GitHub's personal access token with access to repository
           token: ${{ secrets.MANGO_CI_UXD }}
           persist-credentials: false
@@ -114,7 +114,7 @@ jobs:
         run: |
           solana airdrop 1 -u d
 
-      - name: Fund test wallet with 8 sol for running the tests
+      - name: Fund test wallet with 8 sol for program deployment and running the tests (the test themselves are self funded)
         run: |
           solana airdrop 1 -u d
           solana airdrop 1 -u d
@@ -154,4 +154,6 @@ jobs:
       - name: Wrap up uninstalling program and returning sols to the faucet
         run: |
           solana program close $(solana-keygen pubkey ./target/deploy/uxd-keypair.json)
+          solana transfer ${{ env.DEVNET_FAUCET }} $(solana balance)
+          solana config set -k ${{ runner_wallet_path }}
           solana transfer ${{ env.DEVNET_FAUCET }} $(solana balance)
