Use a single wallet

--- a/.github/workflows/ci-uxd.yml
+++ b/.github/workflows/ci-uxd.yml
@@ -18,7 +18,6 @@ env:
   anchor_version: 0.20.0
   cluster: "devnet"
   runner_wallet_path: "/home/runner/.config/solana/id.json"
-  test_wallet_path: "/home/runner/.config/solana/id-test.json"
   mango_account_mm: "8fbL4156uoVYYyY9cvA6hVBBTdui9356tdKmFbkC6t6w"
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
   DEVNET_FAUCET: "9B5XszUGdMaxCZ7uSQhPzdks5ZQSmWxrmzCSvtJ6Ns6g"
@@ -102,7 +101,6 @@ jobs:
           solana config set -u d
           solana config get
           solana-keygen new -o ${{ env.runner_wallet_path }}
-          solana-keygen new -o ${{ env.test_wallet_path }}
           
       - name: Checkout MangoClient-v3, install dependencies, and run MM bot devnet SOL perp + Keeper
         uses: actions/checkout@v2
@@ -110,12 +108,9 @@ jobs:
           repository: blockworks-foundation/mango-client-v3
           path: ./mango-client-v3
 
-      - name: Fund runner wallet with 1 sol for running Keeper/MM bot
+      - name: Fund test wallet with 8 sol for program deployment and running MM/Keeper (the test themselves are self funded)
         run: |
           solana airdrop 1 -u d
-
-      - name: Fund test wallet with 8 sol for program deployment and running the tests (the test themselves are self funded)
-        run: |
           solana airdrop 1 -u d
           solana airdrop 1 -u d
           solana airdrop 1 -u d
@@ -138,22 +133,19 @@ jobs:
           echo "@uxdprotocol:registry=https://npm.pkg.github.com" >> ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ env.NODE_AUTH_TOKEN }}" >> ~/.npmrc
 
-      - name: Yarn install + use local version of Mango-v3
+      - name: Yarn install tests
         run: |
           cd ./uxd-program
-          sed -i.bak 's/^mango.*/mango={path="..\/..\/..\/program\/",features=["no-entrypoint"]}/' ./programs/uxd/Cargo.toml
           yarn install
+
+      - name: Run tests (using local version of Mangov3)
+        run: |
           chmod +x ./scripts/reset_program_id.sh
           ./scripts/reset_program_id.sh
-
-      - name: Run tests (with test wallet)
-        run: |
-          solana config set -k ${{ test_wallet_path }}
+          sed -i.bak 's/^mango.*/mango={path="..\/..\/..\/program\/",features=["no-entrypoint"]}/' ./programs/uxd/Cargo.toml
           npx @project-serum/anchor-cli@${{ env.anchor_version }} test --skip-local-validator
 
       - name: Wrap up uninstalling program and returning sols to the faucet
         run: |
           solana program close $(solana-keygen pubkey ./target/deploy/uxd-keypair.json)
-          solana transfer ${{ env.DEVNET_FAUCET }} $(solana balance)
           solana config set -k ${{ runner_wallet_path }}
-          solana transfer ${{ env.DEVNET_FAUCET }} $(solana balance)
