--- a/.github/workflows/ci-uxd.yml
+++ b/.github/workflows/ci-uxd.yml
@@ -1,12 +1,10 @@
-name: CI
+name: UXD CI
 
 on:
   push:
-    branches: [ main, v.** ]
+    branches: main
   pull_request:
-    branches: [ main, v.** ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [main, v*.*]
   workflow_dispatch:
   
 permissions:
@@ -14,43 +12,47 @@ permissions:
   pull-requests: write
   
 env:
-  solana_version: 1.8.11
-  anchor_version: 0.20.0
-  cluster: "devnet"
-  runner_wallet_path: "/home/runner/.config/solana/id.json"
-  mango_account_mm: "8fbL4156uoVYYyY9cvA6hVBBTdui9356tdKmFbkC6t6w"
+  CARGO_TERM_COLOR: always
+  SOLANA_VERSION: 1.9.6
+  ANCHOR_VERSION: 0.20.1
+  CLUSTER: "devnet"
+  RUNNER_WALLET_PATH: "/home/runner/.config/solana/id.json"
+  MANGO_ACCOUNT_MM_SOL: "8fbL4156uoVYYyY9cvA6hVBBTdui9356tdKmFbkC6t6w"
+  MANGO_ACCOUNT_MM_BTC: "4Tw2AjjEXSWvFC9CCm88yhswRGgJokxiQnJDtVnVctTc"
+  MANGO_ACCOUNT_MM_ETH: "Bnutxi4RpfduHSuQ2ZtDAEb4GegU3X1gmWZhQpe1YMts"
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
   DEVNET_FAUCET: "9B5XszUGdMaxCZ7uSQhPzdks5ZQSmWxrmzCSvtJ6Ns6g"
+  DEPLOYMENT_FUNDING_AMOUNT: 15
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
 
-    steps: 
-      - uses: actions/checkout@v2
-
+    steps:
+          
       - name: Checkout @UXDProtocol/UXD-Program, install dependencies
         uses: actions/checkout@v2
         with:
           repository: UXDProtocol/uxd-program
-          ref: refs/heads/dev # USE dev for now as main is frozen for audit commit hash
+          ref: refs/heads/v3.0.0
           # GitHub's personal access token with access to repository
           token: ${{ secrets.MANGO_CI_UXD }}
           persist-credentials: false
           path: ./uxd-program
 
       - uses: actions/setup-node@v2
-        name: Node 14 setup
+        name: Node 14 installation
         with:
           node-version: "14"
           cache: "yarn"
-          cache-dependency-path: ./uxd-program/yarn.lock
           registry-url: 'https://npm.pkg.github.com'
           scope: "@UXDProtocol"
           always-auth: true
-
+          
       - uses: actions/cache@v2
-        name: Cache Cargo registry + index.
+        name: Cache Cargo registry + index
         id: cache-anchor
         with:
           path: |
@@ -59,7 +61,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
           key: cargo-${{ runner.os }}-v0000-${{ hashFiles('**/Cargo.lock') }}
-                
+          
       - name: Add Solana to PATH
         run: echo "/home/runner/.local/share/solana/install/active_release/bin:$PATH" >> $GITHUB_PATH
         
@@ -70,7 +72,7 @@ jobs:
           path: |
             ~/.cache/solana/
             ~/.local/share/solana/
-          key: solana-${{ runner.os }}-v0000-${{ env.solana_version }}
+          key: solana-${{ runner.os }}-v0000-${{ env.SOLANA_VERSION }}
 
       - uses: actions/cache@v2
         name: Cache target folder
@@ -83,73 +85,75 @@ jobs:
           key: solana-${{ runner.os }}-v0000-${{ hashFiles('**/programs/**/*.rs') }}-${{ hashFiles('**/programs/**/*.toml') }}
 
       - uses: actions-rs/toolchain@v1
-        name: Rust toolchain
+        name: Rust toolchain installation
         with:
           toolchain: nightly
           override: true
+          profile: minimal
 
-      - name: Install solana
+      - name: install solana
         if: steps.cache-solana.outputs.cache-hit != 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y pkg-config build-essential libudev-dev
-          sh -c "$(curl -sSfL https://release.solana.com/v${{ env.solana_version }}/install)"
+          sh -c "$(curl -sSfL https://release.solana.com/v${{ env.SOLANA_VERSION }}/install)"
 
-      - name: Setup Solana
+      - name: Setup solana 
         run: |
           solana --version
           solana config set -u d
-          solana config get
-          solana-keygen new -o ${{ env.runner_wallet_path }}
+
+      - name: Create keypair and funds it
+        run: |
+          solana-keygen new -o ${{ env.RUNNER_WALLET_PATH }}
+          solana balance
+          solana transfer --keypair ./scripts/bank-keypair.json $(solana-keygen pubkey ${{ env.RUNNER_WALLET_PATH }}) ${{ env.DEPLOYMENT_FUNDING_AMOUNT }} --allow-unfunded-recipient
+          solana balance
           
-      - name: Checkout MangoClient-v3, install dependencies, and run MM bot devnet SOL perp + Keeper
+      - name: Checkout MangoClient-v3
         uses: actions/checkout@v2
         with:
           repository: blockworks-foundation/mango-client-v3
-          path: ./mango-client-v3
-
-      - name: Fund test wallet with 12 sol for program deployment and running MM/Keeper (the test themselves are self funded)
-        run: |
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
-          solana airdrop 1 -u d
+          path: /home/runner/work/uxd-program/uxd-program/third-party-dependencies/mango-client-v3
 
       - name: Install MangoClient-v3 dependencies then runs Mango Keeper and MM bot on devnet for SOL perp
         run: |
-          cd ./mango-client-v3
+          cd /home/runner/work/uxd-program/uxd-program/third-party-dependencies/mango-client-v3
           yarn install
-          GROUP=devnet.2 CLUSTER=${{ env.cluster }} KEYPAIR=${{ env.runner_wallet_path }} yarn keeper &
-          GROUP=devnet.2 CLUSTER=${{ env.cluster }} KEYPAIR=${{ env.runner_wallet_path }} MANGO_ACCOUNT_PUBKEY=${{ env.mango_account_mm }} MARKET=SOL yarn mm &
+          GROUP=devnet.2 CLUSTER=${{ env.CLUSTER }} KEYPAIR=${{ env.RUNNER_WALLET_PATH }} yarn keeper &
+          GROUP=devnet.2 CLUSTER=${{ env.CLUSTER }} KEYPAIR=${{ env.RUNNER_WALLET_PATH }} MANGO_ACCOUNT_PUBKEY=${{ env.MANGO_ACCOUNT_MM_SOL }} MARKET=SOL yarn mm &
+          GROUP=devnet.2 CLUSTER=${{ env.CLUSTER }} KEYPAIR=${{ env.RUNNER_WALLET_PATH }} MANGO_ACCOUNT_PUBKEY=${{ env.MANGO_ACCOUNT_MM_BTC }} MARKET=BTC yarn mm &
+          GROUP=devnet.2 CLUSTER=${{ env.CLUSTER }} KEYPAIR=${{ env.RUNNER_WALLET_PATH }} MANGO_ACCOUNT_PUBKEY=${{ env.MANGO_ACCOUNT_MM_ETH }} MARKET=ETH yarn mm &
+          cd -
 
       - name: Create NPMRC
         run: |
           echo "@uxdprotocol:registry=https://npm.pkg.github.com" >> ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ env.NODE_AUTH_TOKEN }}" >> ~/.npmrc
 
-      - name: Yarn install tests
-        run: |
-          cd ./uxd-program
-          yarn install
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      - name: Yarn Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+
+      - name: Yarn install
+        run: yarn install
 
       - name: Run tests (using local version of Mangov3)
         run: |
           cd ./uxd-program
-          chmod +x ./scripts/reset_program_id.sh
           ./scripts/reset_program_id.sh
           sed -i.bak 's/^mango.*/mango={path="..\/..\/..\/program\/",features=["no-entrypoint"]}/' ./programs/uxd/Cargo.toml
           npx @project-serum/anchor-cli@${{ env.anchor_version }} test --skip-local-validator
 
+
       - name: Wrap up uninstalling program and returning sols to the faucet
         run: |
-          solana program close $(solana-keygen pubkey ./uxd-program/target/deploy/uxd-keypair.json) --recipient ${{ env.DEVNET_FAUCET }}
+          solana program close $(solana-keygen pubkey ./target/deploy/uxd-keypair.json) --recipient ./scripts/bank-keypair.json
           solana transfer ${{ env.DEVNET_FAUCET }} $(echo $(solana balance | awk '{print $1}') - 0.000005 | bc)
